arr/radarr/radarr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: arr
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/part-of: arr
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.flexflix.top`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: local-network
          namespace: traefik
        - name: authentik
          namespace: authentik
